# inference-observatory

./: .gitignore  pyproject.toml
benchmarks/: tasks.jsonl
observatory/: analysis.py  benchmark.py  cli.py  dashboard.py  db.py  grounding.py  metrics.py  quality.py  tasks.py
observatory/runners/: __init__.py  anthropic_runner.py  base.py  mlx_runner.py  ollama_runner.py  openai_runner.py
tests/: test_analysis.py  test_benchmark.py  test_dashboard.py  test_db.py  test_grounding.py  test_metrics.py  test_quality.py  test_runners.py  test_setup.py
